# grpc-templ-docker-cmake

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
protos/: CMakeLists.txt
src/: CMakeLists.txt  greeter_server.cc
